# EmployeeMonitor

./: .env  .env.example  .gitignore  README.md  alembic.ini  em_cache.db  test_server.py
admin-frontend/: app.js  index.html  styles.css
backend/: requirements.txt
backend/app/: config.py  crud.py  database.py  db.py  main.py  models.py  rate_limit.py  schemas.py  security.py
backend/app/routes/: analytics.py  auth.py  logs.py
backend/app/utils/: __init__.py  normalizer.py  productivity.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260614_0001_initial.py  5192ad66ca0f_add_rate_limits.py
browser-extension/: background.js  manifest.json
client/agent/Agent/: Program.cs
client/extension/: background.js  manifest.json
native-agent/: CMakeLists.txt  agent.py  build.ps1  mock_agent.py  tail_db.py
native-agent/build_vs/: CMakeCache.txt
native-agent/build_vs2026/: CMakeCache.txt
native-agent/src/: main.cpp
server/go/: go.mod
server/go/cmd/eeam/: main.go
server/sql/: schema.sql
tools/: test_cpam.py  test_em.py  view_cache.py
